changed some colours and repaired visibility of hamburger icon

--- a/MtF/src/App.css
+++ b/MtF/src/App.css
@@ -6,5 +6,5 @@
   
   .content {
     flex: 1;
-    padding-bottom: 5rem; /* Odstęp na stopkę */
+    padding-bottom: 100rem; /* Odstęp na stopkę */
   }
