--- a/MtF/src/Footer.css
+++ b/MtF/src/Footer.css
@@ -1,11 +1,11 @@
 .footer {
     position: fixed;
+    height: 40px;
     bottom: 0;
     left: 0;
     width: 100%;
     text-align: center;
     padding: 1rem;
-    background-color: #fff;
     border-top: 1px solid #E2E8F0;
   }
   
@@ -17,6 +17,6 @@
   
   .footer p {
     margin: 0.5rem 0 0;
-    color: #555;
+    color: #5e0000;
     font-size: 1.4rem;
   }
