--- a/MtF/src/index.css
+++ b/MtF/src/index.css
@@ -38,5 +38,5 @@
 }
 
 .app{
-  background-color: rgb(24, 24, 24);
+  background-color: rgb(38, 40, 40);
 }
